Bug 1686606 - Fix outline painting in the non-native theme. r=spohl,mstange

Outline should by default start outside of the border area, not inside.

Then we can use negative outline offsets to cover the border if we want
to.

This prevents the outline from getting inside the padding area.

Differential Revision: https://phabricator.services.mozilla.com/D102454